# digital-fte-starter-kit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  docker-compose.yml  hello.py  pyproject.toml
deployment/: Dockerfile  README.md  ecosystem.config.js
scripts/: setup_vault.py
shared_foundation/: README.md  exceptions.py
shared_foundation/tests/: test_foundation.py  test_stress_foundation.py
src/: main.py
src/brains/: README.md  auditor.py  claude_client.py  finance.py
src/foundation/: README.md  config.py  logger.py
src/watchers/: README.md  approval.py  filesystem.py  gmail.py  whatsapp.py
tests/: test_approval.py  test_finance.py  test_foundation.py  test_stress_brain.py  test_stress_foundation.py  test_stress_watchers.py  test_watcher.py
tier_1_bronze/: README.md  claude_client.py  filesystem.py
tier_1_bronze/tests/: test_claude_stress.py  test_watcher.py
tier_2_silver/: README.md  approval.py  gmail.py  whatsapp.py
tier_2_silver/tests/: test_approval.py  test_stress_watchers.py
tier_3_gold/: README.md  auditor.py  finance.py  social_media.py  xero_bridge.py
tier_3_gold/tests/: test_finance.py  test_finance_stress.py  test_xero.py
