[project]
name = "digital-fte-starter-kit"
version = "0.1.0"
description = "The Enterprise-Grade Starter Kit for building Autonomous Digital Employees."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "watchdog>=4.0.0",
    "python-json-logger>=2.0.0",
    "pydantic-settings>=2.0.0",
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "schedule>=1.2.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.0.0" 
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]